Sequencer hangs after transforming strips #90646

Closed
opened 2021-08-13 10:14:54 +02:00 by Campbell Barton · 6 comments

With blender (current master) 160d57d33c7f100556b6c69b524783a3ac52b53b, the following operation hangs:

Open this file:

This didn't hang in 2.93 although it did produce overlapping strips.

With blender (current master) `160d57d33c7f100556b6c69b524783a3ac52b53b`, the following operation hangs: Open this file: - [sequencer_hangs.blend](https://archive.blender.org/developer/F10279495/sequencer_hangs.blend) - Press `G`, `-30` - Press `Enter` - Blender hangs. This didn't hang in 2.93 although it did produce overlapping strips.
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

I can confirm this. Introduced between: 4891da8ae2 - 6afafc46f6

This didn't hang in 2.93 although it did produce overlapping strips.

As said, it does not hang with prior versions but strip overlaps.

I can confirm this. Introduced between: `4891da8ae2` - `6afafc46f6` >This didn't hang in 2.93 although it did produce overlapping strips. As said, it does not hang with prior versions but strip overlaps.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Richard Antalik was assigned by Eyad Ahmed 2021-08-16 02:15:36 +02:00

This issue was referenced by 24a3446787

This issue was referenced by 24a3446787d31f9b32e6759f91349b598c8e9774

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90646
No description provided.